--- a/handhlegal.html
+++ b/handhlegal.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <title>H&H Legal</title>
-  <link href='https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Poppins:wght@600;700&display=swap' rel='stylesheet'>
+  <title>H&H Legal — Contact & Portal</title>
+  <meta name="description" content="H&H Legal contact information and ANVA client portal access." />
   <link rel='stylesheet' href='assets/style.css'>
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
 </head>
 <body class='handh'>
   <section class='legal-hero'>
@@ -13,10 +14,10 @@
     <div class='legal-inner'>
       <h1 class='h1'>H&amp;H Legal</h1>
       <p class='lead'>Amanda A. Harmon, Esq · Kevin R. Hansen, Esq</p>
-      <address>300 E. Second Street, 15th Floor<br>Reno, NV 89502<br>775‑243‑2686</address>
-      <div class='actions'><a class='btn btn-primary' href='#'>Access the ANVA Client Portal</a></div>
+      <address>300 E. Second Street, 15th Floor<br>Reno, NV 89502<br><a href="tel:+17752432686">775‑243‑2686</a></address>
+      <div class='actions'><a class='btn btn-primary' href='#' aria-disabled="true">Access the ANVA Client Portal</a></div>
       <p class='legal-note'>Email: <a href='mailto:HHLegal@outlook.com'>HHLegal@outlook.com</a></p>
-      <p class='tiny'>H&H Legal operates independently from NV Summit Services.</p>
+      <p class='tiny'>H&amp;H Legal operates independently from NV Summit Services.</p>
       <p><a class='btn btn-ghost' href='index.html'>← Back to NV Summit Services</a></p>
     </div>
   </section>
