--- a/index.html
+++ b/index.html
@@ -3,30 +3,39 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>NV Summit Services</title>
+  <title>NV Summit Services — Reserve Studies, Consulting, Education</title>
+  <meta name="description" content="NV Summit Services provides Reserve Studies, Consulting, Education, and coordinates with H&H Legal for collection management for Nevada community associations." />
+  <link rel="canonical" href="https://www.nvsummitservices.com/">
+  <meta property="og:title" content="NV Summit Services" />
+  <meta property="og:description" content="Reserve Studies, Consulting, Education, and coordinated collection management via H&H Legal." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.nvsummitservices.com/" />
+  <meta property="og:image" content="https://images.unsplash.com/photo-1501785888041-af3ef285b470?auto=format&amp;fit=crop&amp;w=1600&amp;q=80" />
+  <meta name="twitter:card" content="summary_large_image">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
   <link rel="stylesheet" href="assets/style.css" />
-  <meta name="description" content="Reserve Studies, Consulting, Education, and coordinated collection management via H&H Legal." />
 </head>
 <body>
   <header class="site-header" data-header>
-    <nav class="nav container">
-      <a class="logo" href="#top"><span class="logo-mark">NV</span> Summit Services</a>
+    <nav class="nav container" aria-label="Primary">
+      <a class="logo" href="#top"><img src="favicon.svg" alt="NV" class="logo-fav"> NV Summit Services</a>
       <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false" data-nav-toggle><span></span><span></span><span></span></button>
-      <ul class="nav-links" data-nav>
+      <ul class="nav-links" data-nav role="list">
         <li><a href="#about">About</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="#contact">Contact</a></li>
+        <li><a href="handhlegal.html">H&amp;H Law</a></li>
       </ul>
     </nav>
   </header>
 
-  <section id="top" class="hero" data-observe>
+  <section id="top" class="hero" data-observe aria-label="Hero">
     <div class="hero-bg"></div>
     <div class="hero-photo" role="img" aria-label="Nevada mountains background"></div>
     <div class="hero-inner container">
-      <h1 class="hero-title">Reserve Studies • Consulting • Education • <span class="accent">Collection Management</span></h1>
-      <p class="hero-sub">Compliance‑driven services for Nevada community associations and management firms.</p>
+      <h1 class="hero-title">Reserve Studies • Consulting • Education<br> <span class="accent">Collection Management</span></h1>
+      <p class="hero-sub">Compliance-driven services for Nevada community associations and management firms.</p>
       <div class="hero-cta">
         <a href="#services" class="btn btn-primary">Explore Services</a>
         <a href="#contact" class="btn btn-ghost">Talk to Us</a>
@@ -34,66 +43,73 @@
     </div>
   </section>
 
-  <section id="about" class="section about" data-observe>
+  <section id="about" class="section about" data-observe aria-labelledby="who-title">
     <div class="container">
       <div class="split">
         <div>
-          <h2 class="h2">Who We Are</h2>
-          <p><strong>NV Summit Services</strong> delivers compliance‑first support for Nevada community associations and management companies. We provide <em>Reserve Studies</em>, <em>Consulting</em>, and <em>Education</em>, and coordinate with licensed legal professionals at <em>H&H Legal</em> for collection management — maintaining strict duty separation.</p>
+          <h2 class="h2" id="who-title">Who We Are</h2>
+          <p><strong>NV Summit Services</strong> delivers compliance-first support for Nevada community associations and management companies. We provide <em>Reserve Studies</em>, <em>Consulting</em>, and <em>Education</em>, and coordinate with licensed legal professionals at <em>H&amp;H Legal</em> for collection management — maintaining strict duty separation.</p>
         </div>
-        <div class="card note">
+        <div class="card note" role="note" aria-label="Compliance Statement">
           <h3 class="h4">Compliance Statement</h3>
-          <p>NV Summit Services is not a collection agency and does not conduct debt collection activities. We provide administrative coordination and refer matters to H&H Legal, a separate and independent law firm.</p>
+          <p>NV Summit Services is not a collection agency and does not conduct debt collection activities. We provide administrative coordination and refer matters to H&amp;H Legal, a separate and independent law firm.</p>
         </div>
       </div>
     </div>
   </section>
 
-  <section id="services" class="section services" data-observe>
+  <section id="services" class="section services" data-observe aria-labelledby="svc-title">
     <div class="container">
-      <h2 class="h2 center">Our Services</h2>
+      <h2 class="h2 center" id="svc-title">Our Services</h2>
       <p class="lead center">Click a service to inquire or learn more.</p>
+
       <div class="grid services-grid">
         <article class="service-card" data-observe>
-          <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1520607162513-77705c0f0d4a?auto=format&fit=crop&w=900&q=80');"></div>
+          <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1520607162513-77705c0f0d4a?auto=format&amp;fit=crop&amp;w=1200&amp;q=80');"></div>
           <h3 class="h4">Reserve Studies</h3>
           <p>Full studies, updates, and annual reviews.</p>
           <button class="btn btn-primary" data-open="reserve-modal">Request Proposal</button>
         </article>
+
         <article class="service-card" data-observe>
-          <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1529333166437-7750a6dd5a70?auto=format&fit=crop&w=900&q=80');"></div>
+          <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1529333166437-7750a6dd5a70?auto=format&amp;fit=crop&amp;w=1200&amp;q=80');"></div>
           <h3 class="h4">Education</h3>
           <p>Training for boards and management teams.</p>
           <button class="btn btn-primary" data-open="education-modal">Request Info</button>
         </article>
+
         <article class="service-card" data-observe>
-          <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1521791055366-0d553872125f?auto=format&fit=crop&w=900&q=80');"></div>
+          <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1521791055366-0d553872125f?auto=format&amp;fit=crop&amp;w=1200&amp;q=80');"></div>
           <h3 class="h4">Consulting Services</h3>
           <p>Guidance on operations and compliance.</p>
           <button class="btn btn-primary" data-open="consulting-modal">Request Info</button>
         </article>
-        <article class="service-card highlight" data-observe>
-          <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1555375771-14b5e9b30d40?auto=format&fit=crop&w=900&q=80');"></div>
-          <h3 class="h4">Collection Management / H&H Legal</h3>
-          <p>Coordinated support with H&H Legal (independent law firm).</p>
-          <a class="btn btn-ghost" href="handhlegal.html">Visit H&H Legal</a>
+
+        <!-- H&H card with image URL that has no query string (no '&') -->
+        <article class="service-card" data-observe>
+          <div class="thumb"
+            style="background-image:url('https://images.unsplash.com/photo-1520607162513-77705c0f0d4a?auto=format&amp;fit=crop&amp;w=1200&amp;q=80');">
+          </div>
+          <h3 class="h4">Collection Management / H&amp;H Legal</h3>
+          <p>Coordinated support with H&amp;H Legal (independent law firm).</p>
+          <a class="btn btn-primary" href="handhlegal.html">Visit H&amp;H Legal</a>
         </article>
       </div>
     </div>
   </section>
 
-  <section id="contact" class="section contact" data-observe>
+  <section id="contact" class="section contact" data-observe aria-labelledby="contact-title">
     <div class="container">
       <div class="split">
         <div>
-          <h2 class="h2">Contact Us</h2>
+          <h2 class="h2" id="contact-title">Contact Us</h2>
           <p>We’re here to help your association or management company.</p>
           <ul class="contact-list">
             <li><strong>Email:</strong> <a href="mailto:info@nvsummitservices.com">info@nvsummitservices.com</a></li>
-            <li><strong>Phone:</strong> 775‑243‑2686</li>
+            <li><strong>Phone:</strong> <a href="tel:+17752432686">775-243-2686</a></li>
           </ul>
         </div>
-        <div class="card">
+        <div class="card" aria-label="Quick message form">
           <h3 class="h4">Quick Message</h3>
           <form class="stack" action="mailto:info@nvsummitservices.com" method="post" enctype="text/plain">
             <input type="text" name="Name" placeholder="Your Name" required>
@@ -106,22 +122,22 @@
     </div>
   </section>
 
-  <footer class="footer">
+  <footer class="footer" role="contentinfo">
     <div class="container footer-inner">
       <p>© 2025 NV Summit Services. All rights reserved.</p>
-      <nav class="footer-nav">
+      <nav class="footer-nav" aria-label="Footer">
         <a href="#top">Top</a>
         <a href="#services">Services</a>
-        <a href="handhlegal.html">H&H Legal</a>
+        <a href="handhlegal.html">H&amp;H Legal</a>
       </nav>
     </div>
   </footer>
 
   <!-- Modals -->
-  <dialog class="modal" id="reserve-modal">
-    <div class="modal-dialog">
+  <dialog class="modal" id="reserve-modal" aria-labelledby="reserve-title">
+    <div class="modal-dialog" role="document">
       <button class="modal-close" data-close aria-label="Close">✕</button>
-      <h3 class="h3">Reserve Study Proposal</h3>
+      <h3 class="h3" id="reserve-title">Reserve Study Proposal</h3>
       <form class="stack" action="mailto:info@nvsummitservices.com" method="post" enctype="text/plain">
         <input type="text" name="Name" placeholder="Your Name" required>
         <input type="text" name="Association" placeholder="Association Name" required>
@@ -133,10 +149,10 @@
     </div>
   </dialog>
 
-  <dialog class="modal" id="education-modal">
-    <div class="modal-dialog">
+  <dialog class="modal" id="education-modal" aria-labelledby="education-title">
+    <div class="modal-dialog" role="document">
       <button class="modal-close" data-close aria-label="Close">✕</button>
-      <h3 class="h3">Education Inquiry</h3>
+      <h3 class="h3" id="education-title">Education Inquiry</h3>
       <form class="stack" action="mailto:info@nvsummitservices.com" method="post" enctype="text/plain">
         <input type="text" name="Name" placeholder="Your Name" required>
         <input type="email" name="Email" placeholder="Email">
@@ -146,10 +162,10 @@
     </div>
   </dialog>
 
-  <dialog class="modal" id="consulting-modal">
-    <div class="modal-dialog">
+  <dialog class="modal" id="consulting-modal" aria-labelledby="consulting-title">
+    <div class="modal-dialog" role="document">
       <button class="modal-close" data-close aria-label="Close">✕</button>
-      <h3 class="h3">Consulting Inquiry</h3>
+      <h3 class="h3" id="consulting-title">Consulting Inquiry</h3>
       <form class="stack" action="mailto:info@nvsummitservices.com" method="post" enctype="text/plain">
         <input type="text" name="Name" placeholder="Your Name" required>
         <input type="email" name="Email" placeholder="Email">
