--- a/handhlegal.html
+++ b/handhlegal.html
@@ -3,10 +3,39 @@
 <head>
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <title>H&H Legal — Contact & Portal</title>
-  <meta name="description" content="H&H Legal contact information and ANVA client portal access." />
+  <title>H&H Legal</title>
+  <link href='https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Poppins:wght@600;700&display=swap' rel='stylesheet'>
   <link rel='stylesheet' href='assets/style.css'>
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+<link rel="icon" type="image/x-icon" href="assets/images/handh-favicon-badge.ico?v=3">
+<link rel="icon" type="image/png" sizes="180x180" href="assets/images/handh-favicon-badge.png?v=3">
+  <style>
+    /* Center this page only */
+    body.handh .legal-hero{
+      min-height: 80vh;
+      display: grid;
+      place-items: center;
+      text-align: center;
+      position: relative;
+    }
+    body.handh .legal-inner{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: .5rem;
+      padding: 2rem 1rem;
+    }
+    body.handh address{ font-style: normal; }
+    body.handh .actions{ display: flex; gap: .75rem; justify-content: center; }
+    body.handh .legal-disclaimer{ 
+      max-width: 60ch; 
+      font-size: .95rem; 
+      line-height: 1.5; 
+      color: #c9ced6; 
+      margin-top: .5rem;
+    }
+    body.handh .legal-disclaimer strong{ color:#e7eaee; }
+  </style>
+
 </head>
 <body class='handh'>
   <section class='legal-hero'>
@@ -14,10 +43,11 @@
     <div class='legal-inner'>
       <h1 class='h1'>H&amp;H Legal</h1>
       <p class='lead'>Amanda A. Harmon, Esq · Kevin R. Hansen, Esq</p>
-      <address>300 E. Second Street, 15th Floor<br>Reno, NV 89502<br><a href="tel:+17752432686">775‑243‑2686</a></address>
-      <div class='actions'><a class='btn btn-primary' href='#' aria-disabled="true">Access the ANVA Client Portal</a></div>
+      <address>300 E. Second Street, 15th Floor<br>Reno, NV 89502<br>775‑243‑2686</address>
+      <div class='actions'><a class='btn btn-primary' href='#'>Access the ANVA Client Portal</a></div>
       <p class='legal-note'>Email: <a href='mailto:HHLegal@outlook.com'>HHLegal@outlook.com</a></p>
-      <p class='tiny'>H&amp;H Legal operates independently from NV Summit Services.</p>
+      <p class='tiny'><strong>H&H Legal operates independently from NV Summit Services.</strong></p>
+          <div class="legal-disclaimer"><strong>Disclaimer:</strong> H&amp;H Legal is a Nevada law firm providing legal services under the direction of licensed attorneys Amanda A. Harmon, Esq. and Kevin R. Hansen, Esq. This site and linked portal are for communication and account management between clients and the firm. NV Summit Services is not a law firm, does not provide legal advice, and does not control or supervise the legal work of H&amp;H Legal.</div>
       <p><a class='btn btn-ghost' href='index.html'>← Back to NV Summit Services</a></p>
     </div>
   </section>
