Change webpage title to 'NV Summit Services'
Updated the title of the webpage to be more concise.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>NV Summit Services — Reserve Studies, Consulting, Education</title>
+  <title>NV Summit Services</title>
   <meta name="description" content="NV Summit Services provides Reserve Studies, Consulting, Education, and coordinates with H&H Legal for collection management for Nevada community associations." />
   <link rel="canonical" href="https://www.nvsummitservices.com/">
   <meta property="og:title" content="NV Summit Services" />
