--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><a href="handhlegal.html">H&amp;H Law</a></li>
+        <li><a href="handhlegal.html">H&amp;H Legal</a></li>
       </ul>
     </nav>
   </header>
