--- a/handhlegal.html
+++ b/handhlegal.html
@@ -45,7 +45,7 @@
       <p class='lead'>Amanda A. Harmon, Esq · Kevin R. Hansen, Esq</p>
       <address>300 E. Second Street, 15th Floor<br>Reno, NV 89502<br>775‑243‑2686</address>
       <div class='actions'><a class='btn btn-primary' href='#'>Access the Client Portal</a></div>
-      <p class='legal-note'>Email: <a href='mailto:handhlegal@outlook.com'>HandHLegal@outlook.com</a></p>
+      <p class='legal-note'>Email: <a href='mailto:handhlegal@outlook.com'>handhlegal@outlook.com</a></p>
       <p class='tiny'><strong>H&H Legal operates independently from NV Summit Services.</strong></p>
           <div class="legal-disclaimer"><strong>Disclaimer:</strong> H&amp;H Legal is a Nevada law firm providing legal services under the direction of licensed attorneys Amanda A. Harmon, Esq. and Kevin R. Hansen, Esq. This site and linked portal are for communication and account management between clients and the firm. NV Summit Services is not a law firm, does not provide legal advice, and does not control or supervise the legal work of H&amp;H Legal.</div>
       <p><a class='btn btn-ghost' href='index.html'>← Back to NV Summit Services</a></p>
