--- a/index.html
+++ b/index.html
@@ -1,31 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>NV Summit Services</title>
-  <meta name="description" content="NV Summit Services provides Reserve Studies, Consulting, Education, and coordinates with H&H Legal for collection management for Nevada community associations." />
+  <meta name="description"
+    content="NV Summit Services provides Reserve Studies, Consulting, Education, and coordinates with H&H Legal for collection management for Nevada community associations." />
   <link rel="canonical" href="https://www.nvsummitservices.com/">
   <meta property="og:title" content="NV Summit Services" />
-  <meta property="og:description" content="Reserve Studies, Consulting, Education, and coordinated collection management via H&H Legal." />
+  <meta property="og:description"
+    content="Reserve Studies, Consulting, Education, and coordinated collection management via H&H Legal." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.nvsummitservices.com/" />
-  <meta property="og:image" content="https://images.unsplash.com/photo-1501785888041-af3ef285b470?auto=format&amp;fit=crop&amp;w=1600&amp;q=80" />
+  <meta property="og:image"
+    content="https://images.unsplash.com/photo-1501785888041-af3ef285b470?auto=format&amp;fit=crop&amp;w=1600&amp;q=80" />
   <meta name="twitter:card" content="summary_large_image">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Poppins:wght@500;600;700&display=swap"
+    rel="stylesheet">
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="stylesheet" href="assets/style.css" />
-  <noscript><style>[data-observe]{opacity:1 !important;transform:none !important}</style></noscript>
+  <noscript>
+    <style>
+      [data-observe] {
+        opacity: 1 !important;
+        transform: none !important
+      }
+    </style>
+  </noscript>
 </head>
+
 <body>
   <header class="site-header" data-header>
     <nav class="nav container" aria-label="Primary">
       <a class="logo" href="#top"><img src="favicon.svg" alt="NV" class="logo-fav"> NV Summit Services</a>
-      <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false" data-nav-toggle><span></span><span></span><span></span></button>
+      <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false"
+        data-nav-toggle><span></span><span></span><span></span></button>
       <ul class="nav-links" data-nav role="list">
         <li><a href="#about">About</a></li>
         <li><a href="#services">Services</a></li>
@@ -39,10 +54,11 @@
     <div class="hero-bg"></div>
     <div class="hero-photo" role="img" aria-label="Nevada mountains background"></div>
     <div class="hero-inner container">
-    <h2 class="hero-kicker">Neighbors Helping Neighbors!</h2>
+      <h2 class="hero-kicker">Neighbors Helping Neighbors!</h2>
       <img src="assets/images/hero_logo.png" class="hero-wordmark" alt="Summit Services logo">
 
-      <h1 class="hero-title">Reserve Studies • Consulting • Education<br> <span class="accent">Accounting Services</span></h1>
+      <h1 class="hero-title">Reserve Studies • Consulting • Education<br> <span class="accent">Accounting
+          Services</span></h1>
       <p class="hero-sub">Compliance-driven services for Nevada community associations and management firms.</p>
       <div class="hero-cta">
         <a href="#services" class="btn btn-primary">Explore Services</a>
@@ -56,15 +72,18 @@
       <div class="split">
         <div>
           <h2 class="h2" id="who-title">Who We Are</h2>
-          <p><strong>NV Summit Services</strong> is dedicated to empowering both industry professionals and homeowner volunteers
-          through education and collaboration. Our goal is to simplify the complexities of the HOA process by providing
-          accessible, practical training and consulting services designed to promote transparency, efficiency, and compliance
-          within Nevada’s common-interest communities.</p>
+          <p><strong>NV Summit Services</strong> is dedicated to empowering both industry professionals and homeowner
+            volunteers
+            through education and collaboration. Our goal is to simplify the complexities of the HOA process by
+            providing
+            accessible, practical training and consulting services designed to promote transparency, efficiency, and
+            compliance
+            within Nevada’s common-interest communities.</p>
         </div>
         <div class="card note" role="note" aria-label="Compliance Statement">
           <h3 class="h4"><strong>Professional Licenses-</strong></h3><br>
           <p>Licensed Community Association Manager (CAM #226)<br><br>
-          Licensed Reserve Specialist (RS #321)</p>
+            Licensed Reserve Specialist (RS #321)</p>
         </div>
       </div>
     </div>
@@ -98,8 +117,7 @@
         </article>
 
         <article class="service-card" data-observe>
-          <div class="thumb"
-            style="background-image:url('assets/images/service-legal.jpg');">
+          <div class="thumb" style="background-image:url('assets/images/service-legal.jpg');">
           </div>
           <h3 class="h4">H&amp;H Legal</h3>
           <p>Support cordination with H&amp;H Legal (independent law firm).</p>
@@ -145,7 +163,7 @@
           recovery operations. We are not a law firm and do not provide legal advice.
         </p>
       </div>
-  
+
       <nav class="footer-nav" aria-label="Footer">
         <a href="#top">Top</a>
         <a href="#services">Services</a>
@@ -165,7 +183,11 @@
         <input type="text" name="Association" placeholder="Association Name" required>
         <input type="text" name="Address" placeholder="Address" required>
         <input type="tel" name="Phone" placeholder="Phone Number">
-        <select name="Type of Study"><option>Full Study</option><option>Update</option><option>Annual Review</option></select>
+        <select name="Type of Study">
+          <option>Full Study</option>
+          <option>Update</option>
+          <option>Annual Review</option>
+        </select>
         <button class="btn btn-primary" type="submit">Submit</button>
       </form>
     </div>
@@ -201,4 +223,5 @@
 
   <script src="assets/script.js" defer></script>
 </body>
+
 </html>
