--- a/handhlegal.html
+++ b/handhlegal.html
@@ -68,7 +68,7 @@
         </a>
         <!-- This triggers the modal using delegated logic in script.js -->
         <a class="btn btn-primary" href="#" data-modal="#modal-demand">
-          Request Demand Letter
+          Request Demand
         </a>
       </div>
       <p class='legal-note'>Email: <a href='mailto:handhlegal@outlook.com'>handhlegal@outlook.com</a></p>
@@ -86,7 +86,7 @@
   <dialog id="modal-demand" class="modal" aria-labelledby="demand-title">
     <div class="modal-dialog" role="document">
       <header class="modal-head">
-        <h3 class="h3" id="demand-title">Request Demand Letter</h3>
+        <h3 class="h3" id="demand-title">Request Demand</h3>
         <button class="modal-close" type="button" data-close aria-label="Close">&times;</button>
       </header>
       <section class="modal-body">
@@ -115,7 +115,7 @@
               <input name="address" placeholder="Property Address">
               <textarea name="notes" rows="4" placeholder="Notes / Instructions"></textarea>
             
-              <button class="btn btn-primary" type="submit">Request Demand Letter</button>
+              <button class="btn btn-primary" type="submit">Request Demand</button>
             </form>
           </div>
         </div>
