--- a/index.html
+++ b/index.html
@@ -183,10 +183,13 @@
         <input type="text" name="Association" placeholder="Association Name" required>
         <input type="text" name="Address" placeholder="Address" required>
         <input type="tel" name="Phone" placeholder="Phone Number">
+        <h4 class="h5">&nbsp;&nbsp;Select Study Level or Inquire About Free Reviews</h5>
         <select name="Type of Study">
-          <option>Full Study</option>
-          <option>Update</option>
-          <option>Annual Review</option>
+          <option>Free Review Inquiry</option>
+          <option>Level 1</option>
+          <option>Level 2</option>
+          <option>Level 3</option>
+          <option>Level 4</option>
         </select>
         <button class="btn btn-primary" type="submit">Submit</button>
       </form>
