Correct spelling of 'cordination' to 'coordination'

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <div class="thumb" style="background-image:url('assets/images/service-legal.jpg');">
           </div>
           <h3 class="h4">H&amp;H Legal</h3>
-          <p>Support cordination with H&amp;H Legal (independent law firm).</p>
+          <p>Support coordination with H&amp;H Legal (independent law firm).</p>
           <a class="btn btn-primary" href="handhlegal.html">Visit H&amp;H Legal</a>
         </article>
       </div>
