Update links from handhlegal.html to www.handhlegal.net

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><a href="handhlegal.html">H&amp;H Legal</a></li>
+        <li><a href="https://www.handhlegal.net">H&amp;H Legal</a></li>
       </ul>
     </nav>
   </header>
@@ -78,7 +78,7 @@
             providing
             accessible, practical training and consulting services designed to promote transparency, efficiency, and
             compliance
-            within Nevada’s common-interest communities.</p>
+            within Nevada's common-interest communities.</p>
         </div>
         <div class="card note" role="note" aria-label="Compliance Statement">
           <h3 class="h4"><strong>Professional Licenses-</strong></h3><br>
@@ -121,7 +121,7 @@
           </div>
           <h3 class="h4">H&amp;H Legal</h3>
           <p>Support coordination with H&amp;H Legal (independent law firm).</p>
-          <a class="btn btn-primary" href="handhlegal.html">Visit H&amp;H Legal</a>
+          <a class="btn btn-primary" href="https://www.handhlegal.net">Visit H&amp;H Legal</a>
         </article>
       </div>
     </div>
@@ -132,7 +132,7 @@
       <div class="split">
         <div>
           <h2 class="h2" id="contact-title">Contact Us</h2>
-          <p>We’re here to help your association or management company.</p>
+          <p>We're here to help your association or management company.</p>
           <ul class="contact-list">
             <li><strong>Email:</strong> <a href="mailto:info@nvsummitservices.com">info@nvsummitservices.com</a></li>
             <li><strong>Phone:</strong> <a href="tel:+17752432686">775-243-2686</a></li>
@@ -167,7 +167,7 @@
       <nav class="footer-nav" aria-label="Footer">
         <a href="#top">Top</a>
         <a href="#services">Services</a>
-        <a href="handhlegal.html">H&amp;H Legal</a>
+        <a href="https://www.handhlegal.net">H&amp;H Legal</a>
       </nav>
     </div>
   </footer>
