Update links from handhlegal.html to www.handhlegal.net

--- a/handhforms.html
+++ b/handhforms.html
@@ -83,7 +83,7 @@
             </ul>
             <p class='legal-note'>If you need assistance or to send a document, email <a
                     href='mailto:handhlegal@outlook.com'>handhlegal@outlook.com</a></p>
-            <p><a class='btn btn-primary' href='handhlegal.html'>← Back to H&amp;H Legal</a></p>
+            <p><a class='btn btn-primary' href='https://www.handhlegal.net'>← Back to H&amp;H Legal</a></p>
         </div>
     </section>
 </body>
