--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <meta name="description"
     content="NV Summit Services provides Reserve Studies, Consulting, Education, and coordinates with H&H Legal for collection management for Nevada community associations." />
   <link rel="canonical" href="https://www.nvsummitservices.com/">
-  <meta property="og:title" content="NV Summit Services" />
+  <meta property="og:title" content="NV Summit Services | Reserve Studies, HOA Consulting & Education, Collection Management – Nevada" />
   <meta property="og:description"
-    content="Reserve Studies, Consulting, Education, and coordinated collection management via H&H Legal." />
+    content="Compliance-driven reserve studies, consulting, accounting, and education services for Nevada community associations, with coordinated collection services through independent law firm H&amp;H Legal." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.nvsummitservices.com/" />
   <meta property="og:image"
-    content="https://images.unsplash.com/photo-1501785888041-af3ef285b470?auto=format&amp;fit=crop&amp;w=1600&amp;q=80" />
+    content="https://www.nvsummitservices.com/assets/images/hero.jpg" />
   <meta name="twitter:card" content="summary_large_image">
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Poppins:wght@500;600;700&display=swap"
@@ -25,6 +25,30 @@
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="stylesheet" href="assets/style.css" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "ProfessionalService",
+        "name": "NV Summit Services",
+        "url": "https://www.nvsummitservices.com/",
+        "image": "https://www.nvsummitservices.com/assets/images/hero_logo.png",
+        "description": "NV Summit Services provides reserve studies, consulting, accounting, board education, and coordinated collection management via H&H Legal for Nevada community associations.",
+        "telephone": "+1-775-243-2686",
+        "email": "info@nvsummitservices.com",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "300 East 2nd Street #1520",
+          "addressLocality": "Reno",
+          "addressRegion": "NV",
+          "postalCode": "89501",
+          "addressCountry": "US"
+        },
+        "areaServed": {
+          "@type": "AdministrativeArea",
+          "name": "Nevada"
+        }
+      }
+      </script>
   <noscript>
     <style>
       [data-observe] {
@@ -45,7 +69,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><a href="https://www.handhlegal.net">H&amp;H Legal</a></li>
+        <li><a href="https://handhlegal.net" target="_blank" rel="noopener noreferrer">H&amp;H Legal</a></li>
       </ul>
     </nav>
   </header>
@@ -78,9 +102,9 @@
             providing
             accessible, practical training and consulting services designed to promote transparency, efficiency, and
             compliance
-            within Nevada's common-interest communities.</p>
+            within Nevada’s common-interest communities.</p>
         </div>
-        <div class="card note" role="note" aria-label="Compliance Statement">
+        <div class="card note card-gold" role="note" aria-label="Compliance Statement">
           <h3 class="h4"><strong>Professional Licenses-</strong></h3><br>
           <p>Licensed Community Association Manager (CAM #226)<br><br>
             Licensed Reserve Specialist (RS #321)</p>
@@ -92,38 +116,38 @@
   <section id="services" class="section services" data-observe aria-labelledby="svc-title">
     <div class="container">
       <h2 class="h2 center" id="svc-title">Our Services</h2>
-      <p class="lead center">Click a service to inquire or learn more.</p>
+      <p class="lead center">Click a service card to learn more.</p>
 
-      <div class="grid services-grid">
-        <article class="service-card" data-observe>
-          <div class="thumb" style="background-image:url('assets/images/service-reserve.jpg');"></div>
-          <h3 class="h4">Reserve Studies</h3>
-          <p>Full studies, updates, and annual reviews.</p>
-          <button class="btn btn-primary" data-open="reserve-modal">Request Proposal</button>
-        </article>
+<div class="grid services-grid">
+  <article class="service-card" data-observe data-link="reserve-studies.html">
+    <div class="thumb" style="background-image:url('assets/images/service-reserve.jpg');"></div>
+    <h3 class="h4">Reserve Studies</h3>
+    <p>Full studies, updates, and annual reviews.</p>
+    <button class="btn btn-primary" data-open="reserve-modal">Request Proposal</button>
+  </article>
 
-        <article class="service-card" data-observe>
-          <div class="thumb" style="background-image:url('assets/images/service-education.jpg');"></div>
-          <h3 class="h4">Education</h3>
-          <p>Training for boards and management teams.</p>
-          <button class="btn btn-primary" data-open="education-modal">Request Info</button>
-        </article>
+  <article class="service-card" data-observe data-link="education.html">
+    <div class="thumb" style="background-image:url('assets/images/service-education.jpg');"></div>
+    <h3 class="h4">Education</h3>
+    <p>Training for boards and management teams.</p>
+    <button class="btn btn-primary" data-open="education-modal">Request Info</button>
+  </article>
 
-        <article class="service-card" data-observe>
-          <div class="thumb" style="background-image:url('assets/images/service-consulting.jpg');"></div>
-          <h3 class="h4">Consulting Services</h3>
-          <p>Guidance on operations and compliance.</p>
-          <button class="btn btn-primary" data-open="consulting-modal">Request Info</button>
-        </article>
+  <article class="service-card" data-observe data-link="consulting.html">
+    <div class="thumb" style="background-image:url('assets/images/service-consulting.jpg');"></div>
+    <h3 class="h4">Consulting Services</h3>
+    <p>Guidance on operations and compliance.</p>
+    <button class="btn btn-primary" data-open="consulting-modal">Request Info</button>
+  </article>
 
-        <article class="service-card" data-observe>
-          <div class="thumb" style="background-image:url('assets/images/service-legal.jpg');">
-          </div>
-          <h3 class="h4">H&amp;H Legal</h3>
-          <p>Support coordination with H&amp;H Legal (independent law firm).</p>
-          <a class="btn btn-primary" href="https://www.handhlegal.net">Visit H&amp;H Legal</a>
-        </article>
-      </div>
+  <article class="service-card" data-observe data-link="https://handhlegal.net">
+    <div class="thumb" style="background-image:url('assets/images/service-legal.jpg');"></div>
+    <h3 class="h4">H&amp;H Legal</h3>
+    <p>Support coordination with H&amp;H Legal (independent law firm).</p>
+    <a class="btn btn-primary" href="https://handhlegal.net" target="_blank" rel="noopener noreferrer">Visit H&amp;H Legal</a>
+  </article>
+</div>
+
     </div>
   </section>
 
@@ -132,7 +156,7 @@
       <div class="split">
         <div>
           <h2 class="h2" id="contact-title">Contact Us</h2>
-          <p>We're here to help your association or management company.</p>
+          <p>We’re here to help your association or management company.</p>
           <ul class="contact-list">
             <li><strong>Email:</strong> <a href="mailto:info@nvsummitservices.com">info@nvsummitservices.com</a></li>
             <li><strong>Phone:</strong> <a href="tel:+17752432686">775-243-2686</a></li>
@@ -140,7 +164,7 @@
             <li><strong>Business Hours:</strong> Mon-Fri, 9am-5pm / Sat,Sun by appointment</li>
           </ul>
         </div>
-        <div class="card" aria-label="Quick message form">
+        <div class="card card-gold" aria-label="Quick message form">
           <h3 class="h4">Quick Message</h3>
           <form class="stack" method="POST" action="https://api.web3forms.com/submit">
             <input type="hidden" name="access_key" value="86f3717a-7836-49aa-99a2-4e6adbd7ec3f">
@@ -159,15 +183,14 @@
       <div class="footer-copy">
         <p>© 2025 NV Summit Services. All rights reserved.</p>
         <p class="footer-disclaimer">
-          NV Summit Services is a Nevada-based managed services provider supporting licensed professionals in
-          recovery operations. We are not a law firm and do not provide legal advice.
+          NV Summit Services is a Nevada-based managed services provider supporting licensed professionals. We are not a law firm and do not provide legal advice.
         </p>
       </div>
 
       <nav class="footer-nav" aria-label="Footer">
         <a href="#top">Top</a>
         <a href="#services">Services</a>
-        <a href="https://www.handhlegal.net">H&amp;H Legal</a>
+        <a href="https://handhlegal.net" target="_blank" rel="noopener noreferrer">H&amp;H Legal</a>
       </nav>
     </div>
   </footer>
