--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>NV Summit Services</title>
+  <title>Summit Community Services | Reserve Studies, Consulting, Education, Collection Management - Reno, Nevada</title>
   <meta name="description"
-    content="NV Summit Services provides Reserve Studies, Consulting, Education, and coordinates with H&H Legal for collection management for Nevada community associations." />
+    content="Summit Community Services provides Reserve Studies, Consulting, Education, and coordinates with H&H Legal for collection management for Nevada community associations." />
   <link rel="canonical" href="https://www.nvsummitservices.com/">
-  <meta property="og:title" content="NV Summit Services | Reserve Studies, HOA Consulting & Education, Collection Management – Nevada" />
+  <meta property="og:title" content="Summit Community Services | Reserve Studies, HOA Consulting & Education, Collection Management – Nevada" />
   <meta property="og:description"
     content="Compliance-driven reserve studies, consulting, accounting, and education services for Nevada community associations, with coordinated collection services through independent law firm H&amp;H Legal." />
   <meta property="og:type" content="website" />
@@ -29,10 +29,11 @@
       {
         "@context": "https://schema.org",
         "@type": "ProfessionalService",
-        "name": "NV Summit Services",
+        "name": "Summit Community Services",
+        "alternateName": "NV Summit Services",
         "url": "https://www.nvsummitservices.com/",
         "image": "https://www.nvsummitservices.com/assets/images/hero_logo.png",
-        "description": "NV Summit Services provides reserve studies, consulting, accounting, board education, and coordinated collection management via H&H Legal for Nevada community associations.",
+        "description": "Summit Community Services provides reserve studies, consulting, accounting, board education, and coordinated collection management via H&H Legal for Nevada community associations.",
         "telephone": "+1-775-243-2686",
         "email": "info@nvsummitservices.com",
         "address": {
@@ -43,11 +44,29 @@
           "postalCode": "89501",
           "addressCountry": "US"
         },
-        "areaServed": {
-          "@type": "AdministrativeArea",
-          "name": "Nevada"
+        "areaServed": [
+          {
+            "@type": "City",
+            "name": "Reno"
+          },
+          {
+            "@type": "City",
+            "name": "Las Vegas"
+          },  
+          {
+            "@type": "State",
+            "name": "Nevada"
+          },
+          {
+            "@type": "Country",
+            "name": "United States"
+          },
+          {
+            "@type": "AdministrativeArea",
+            "name": "Nevada"
+          }
+        ]
         }
-      }
       </script>
   <noscript>
     <style>
@@ -62,7 +81,7 @@
 <body>
   <header class="site-header" data-header>
     <nav class="nav container" aria-label="Primary">
-      <a class="logo" href="#top"><img src="favicon.svg" alt="NV" class="logo-fav"> NV Summit Services</a>
+      <a class="logo" href="#top"><img src="favicon.svg" alt="NV" class="logo-fav"> Summit Community Services</a>
       <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false"
         data-nav-toggle><span></span><span></span><span></span></button>
       <ul class="nav-links" data-nav role="list">
@@ -96,7 +115,7 @@
       <div class="split">
         <div>
           <h2 class="h2" id="who-title">Who We Are</h2>
-          <p><strong>NV Summit Services</strong> is dedicated to empowering both industry professionals and homeowner
+          <p><strong>Summit Community Services</strong> is dedicated to empowering both industry professionals and homeowner
             volunteers
             through education and collaboration. Our goal is to simplify the complexities of the HOA process by
             providing
@@ -105,7 +124,7 @@
             within Nevada’s common-interest communities.</p>
         </div>
         <div class="card note card-gold" role="note" aria-label="Compliance Statement">
-          <h3 class="h4"><strong>Professional Licenses-</strong></h3><br>
+          <h3 class="h4"><strong>Professional Licenses - Traci Wozniak</strong></h3><br>
           <p>Licensed Community Association Manager (CAM #226)<br><br>
             Licensed Reserve Specialist (RS #321)</p>
         </div>
@@ -181,9 +200,9 @@
   <footer class="footer" role="contentinfo">
     <div class="container footer-inner">
       <div class="footer-copy">
-        <p>© 2025 NV Summit Services. All rights reserved.</p>
+        <p>© 2025 Summit Community Services. All rights reserved.</p>
         <p class="footer-disclaimer">
-          NV Summit Services is a Nevada-based managed services provider supporting licensed professionals. We are not a law firm and do not provide legal advice.
+          Summit Community Services is a Nevada-based managed services provider supporting licensed professionals. We are not a law firm and do not provide legal advice.
         </p>
       </div>
 
