--- a/reserve-studies.html
+++ b/reserve-studies.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Reserve Studies — NV Summit Services</title>
+    <title>HOA Reserve Studies — Summit Community Services</title>
     <meta name="description"
-        content="Reserve studies and updates for Nevada community associations, with clear funding recommendations and board-friendly reports from NV Summit Services." />
+        content="Reserve studies and updates for Nevada community associations, with clear funding recommendations and board-friendly reports from Summit Community Services." />
     <link rel="canonical" href="https://www.nvsummitservices.com/reserve-studies.html" />
 
     <!-- Fonts -->
@@ -31,7 +31,7 @@
     <header class="site-header" data-header>
         <nav class="nav container" aria-label="Primary">
             <a class="logo" href="index.html#top">
-                <img src="favicon.svg" alt="NV" class="logo-fav"> NV Summit Services
+                <img src="favicon.svg" alt="NV" class="logo-fav"> Summit Community Services
             </a>
             <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false" data-nav-toggle>
                 <span></span><span></span><span></span>
@@ -51,7 +51,7 @@
                 <p><a class="btn btn-ghost" href="index.html#services">← Back to Services</a></p>
 
                 <div class="page-title-bar">
-                    <h1 class="h1" id="reserve-title">Reserve Studies</h1>
+                    <h1 class="h1" id="reserve-title">HOA Reserve Studies in Nevada</h1>
                 </div>
                 <p class="lead">
                     Practical, board-friendly reserve studies and updates designed for Nevada community associations and
@@ -165,9 +165,9 @@
     <footer class="footer" role="contentinfo">
         <div class="container footer-inner">
             <div class="footer-copy">
-                <p>© 2025 NV Summit Services. All rights reserved.</p>
+                <p>© 2025 Summit Community Services. All rights reserved.</p>
                 <p class="footer-disclaimer">
-                    NV Summit Services is a Nevada-based managed services provider supporting licensed professionals. We
+                    Summit Community Services is a Nevada-based managed services provider supporting licensed professionals. We
                     are not a law firm and do not provide legal advice.
                 </p>
             </div>
