--- a/education.html
+++ b/education.html
@@ -313,7 +313,7 @@
         <div class="modal-dialog" role="document">
             <button class="modal-close" data-close aria-label="Close">✕</button>
             <h3 class="h3" id="class-register-title">Class Registration | $50 per person</h3>
-            <p style="margin-bottom:.75rem;">
+            <p style="margin-bottom:.75rem; color:  #e7eaee;">
                 We’ll confirm your seat and send details by email.
             </p>
             <form class="stack" method="POST" action="https://api.web3forms.com/submit">
@@ -338,3 +338,4 @@
 
 
 </html>
+
