Change text on modal
Update pricing for class registration to reflect $25 per CEU

--- a/education.html
+++ b/education.html
@@ -312,7 +312,7 @@
     <dialog class="modal" id="class-register-modal" aria-labelledby="class-register-title">
         <div class="modal-dialog" role="document">
             <button class="modal-close" data-close aria-label="Close">✕</button>
-            <h3 class="h3" id="class-register-title">Class Registration | $50 per person</h3>
+            <h3 class="h3" id="class-register-title">Class Registration | $25 per CEU</h3>
             <p style="margin-bottom:.75rem; color:  #e7eaee;">
                 We’ll confirm your seat and send details by email.
             </p>
@@ -338,4 +338,5 @@
 
 
 </html>
+
 
