--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             providing
             accessible, practical training and consulting services designed to promote transparency, efficiency, and
             compliance
-            within Nevada’s common-interest communities.</p>
+            within Nevada's common-interest communities.</p>
         </div>
         <div class="card note card-gold" role="note" aria-label="Compliance Statement">
           <h3 class="h4"><strong>Professional Licenses - Traci Wozniak</strong></h3><br>
@@ -142,21 +142,21 @@
     <div class="thumb" style="background-image:url('assets/images/service-reserve.jpg');"></div>
     <h3 class="h4">Reserve Studies</h3>
     <p>Full studies, updates, and annual reviews.</p>
-    <button class="btn btn-primary" data-open="reserve-modal">Request Proposal</button>
+    <a href="reserve-studies.html" class="btn btn-primary">Learn More</a>
   </article>
 
   <article class="service-card" data-observe data-link="education.html">
     <div class="thumb" style="background-image:url('assets/images/service-education.jpg');"></div>
     <h3 class="h4">Education</h3>
     <p>Training for boards and management teams.</p>
-    <button class="btn btn-primary" data-open="education-modal">Request Info</button>
+    <a href="education.html" class="btn btn-primary">Learn More</a>
   </article>
 
   <article class="service-card" data-observe data-link="consulting.html">
     <div class="thumb" style="background-image:url('assets/images/service-consulting.jpg');"></div>
     <h3 class="h4">Consulting Services</h3>
     <p>Guidance on operations and compliance.</p>
-    <button class="btn btn-primary" data-open="consulting-modal">Request Info</button>
+    <a href="consulting.html" class="btn btn-primary">Learn More</a>
   </article>
 
   <article class="service-card" data-observe data-link="https://handhlegal.net">
@@ -175,7 +175,7 @@
       <div class="split">
         <div>
           <h2 class="h2" id="contact-title">Contact Us</h2>
-          <p>We’re here to help your association or management company.</p>
+          <p>We're here to help your association or management company.</p>
           <ul class="contact-list">
             <li><strong>Email:</strong> <a href="mailto:info@nvsummitservices.com">info@nvsummitservices.com</a></li>
             <li><strong>Phone:</strong> <a href="tel:+17752432686">775-243-2686</a></li>
@@ -213,58 +213,6 @@
       </nav>
     </div>
   </footer>
-
-  <!-- Modals -->
-  <dialog class="modal" id="reserve-modal" aria-labelledby="reserve-title">
-    <div class="modal-dialog" role="document">
-      <button class="modal-close" data-close aria-label="Close">✕</button>
-      <h3 class="h3" id="reserve-title">Reserve Study Proposal</h3>
-      <form class="stack" method="POST" action="https://api.web3forms.com/submit">
-        <input type="hidden" name="access_key" value="86f3717a-7836-49aa-99a2-4e6adbd7ec3f">
-        <input type="text" name="Name" placeholder="Your Name" required>
-        <input type="text" name="Association" placeholder="Association Name" required>
-        <input type="text" name="Address" placeholder="Address" required>
-        <input type="tel" name="Phone" placeholder="Phone Number">
-        <h4 class="h4">&nbsp;&nbsp;Select Study Level or Inquire About Free Reviews</h4>
-        <select name="Type of Study">
-          <option>Free Review Inquiry</option>
-          <option>Level 1</option>
-          <option>Level 2</option>
-          <option>Level 3</option>
-          <option>Level 4</option>
-        </select>
-        <button class="btn btn-primary" type="submit">Submit</button>
-      </form>
-    </div>
-  </dialog>
-
-  <dialog class="modal" id="education-modal" aria-labelledby="education-title">
-    <div class="modal-dialog" role="document">
-      <button class="modal-close" data-close aria-label="Close">✕</button>
-      <h3 class="h3" id="education-title">Education Inquiry</h3>
-      <form class="stack" method="POST" action="https://api.web3forms.com/submit">
-        <input type="hidden" name="access_key" value="86f3717a-7836-49aa-99a2-4e6adbd7ec3f">
-        <input type="text" name="Name" placeholder="Your Name" required>
-        <input type="email" name="Email" placeholder="Email">
-        <textarea name="Notes" rows="4" placeholder="Notes"></textarea>
-        <button class="btn btn-primary" type="submit">Submit</button>
-      </form>
-    </div>
-  </dialog>
-
-  <dialog class="modal" id="consulting-modal" aria-labelledby="consulting-title">
-    <div class="modal-dialog" role="document">
-      <button class="modal-close" data-close aria-label="Close">✕</button>
-      <h3 class="h3" id="consulting-title">Consulting Inquiry</h3>
-      <form class="stack" method="POST" action="https://api.web3forms.com/submit">
-        <input type="hidden" name="access_key" value="86f3717a-7836-49aa-99a2-4e6adbd7ec3f">
-        <input type="text" name="Name" placeholder="Your Name" required>
-        <input type="email" name="Email" placeholder="Email">
-        <textarea name="Notes" rows="4" placeholder="Notes"></textarea>
-        <button class="btn btn-primary" type="submit">Submit</button>
-      </form>
-    </div>
-  </dialog>
 
   <script src="assets/script.js" defer></script>
 </body>
