--- a/education.html
+++ b/education.html
@@ -324,10 +324,10 @@
     
             <!-- Payment Required Notice -->
             <div id="payment-required-section">
-                <p style="margin-bottom: 1rem; color:  #e7eaee;">
+                <p style="margin-bottom: 1rem; color:  #ffffff;">
                     <strong style="color: #ffffff;">Step 1 of 2:</strong> Complete payment to reserve your seat
                 </p>
-                <p style="margin-bottom: 1. 5rem; font-size: 0.875rem; opacity: 0.8; color: #e7eaee;">
+                <p style="margin-bottom: 1. 5rem; font-size: 0.875rem; opacity: 0.8; color: #ffffff;">
                     After payment, you'll return here to complete your registration details.
                 </p>
                 <a href="#" id="stripe-payment-button" class="btn btn-primary"
@@ -371,5 +371,6 @@
 
 
 </html>
+
 
 
