--- a/education.html
+++ b/education.html
@@ -315,11 +315,11 @@
             <h3 class="h3" id="class-register-title">Class Registration</h3>
     
             <div class="class-details"
-                style="background:  rgba(255,255,255,0.05); padding: 1rem; border-radius: 8px; margin-bottom: 1. 5rem;">
+                style="background:  rgba(255,255,255,0.05); padding: 1rem; border-radius: 8px; margin-bottom: 1.5rem;">
                 <p style="margin:  0 0 0.5rem 0;"><strong id="modal-class-name">Class Name</strong></p>
                 <p style="margin: 0 0 0.5rem 0; opacity: 0.85;" id="modal-class-date">Date</p>
                 <p style="margin: 0; font-size: 1.5rem; color: #d4af37;"><strong>$75.00</strong></p>
-                <p style="margin: 0. 5rem 0 0 0; font-size: 0.875rem; opacity: 0.7;">3 NRED-approved CE credits</p>
+                <p style="margin: 0.5rem 0 0 0; font-size: 0.875rem; opacity: 0.7;">3 NRED-approved CE credits</p>
             </div>
     
             <!-- Payment Required Notice -->
@@ -371,6 +371,7 @@
 
 
 </html>
+
 
 
 
